--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,28 @@
+@import "./reset.css";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+body {
+  font-family: Montserrat;
+}
+
+.content {
+  padding: 46px;
+}
+
+.small-ocean-triangle {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .header {
-  display: flex;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-areas:
+    "title description"
+    "divider divider";
+  justify-content: start;
   gap: 22px;
+  align-items: center;
 }
 
 .header-description {
@@ -9,10 +30,80 @@
   font-size: 35px;
   font-weight: 700;
   text-transform: uppercase;
+  grid-area: description;
 }
 
 .header-title {
   color: #008083;
   font-size: 57px;
   font-weight: 700;
+  grid-area: title;
+}
+
+.header-divider {
+  position: relative;
+  grid-area: divider;
+}
+
+.header-divider-line {
+  border-top: 4px solid #008083;
+  border-radius: 5px;
+}
+
+.header-divider-circle {
+  background-color: #008083;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  right: -8px;
+  top: 0px;
+}
+
+.blue-text {
+  color: #008083;
+  font-size: 35px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.footer-info {
+  display: grid;
+  position: absolute;
+  bottom: 33px;
+  align-items: center;
+  grid-template-columns: 3% 80%;
+}
+
+.footer-line {
+  position: absolute;
+  bottom: 0;
+  height: 21px;
+  width: 100%;
+  background: linear-gradient(
+    90deg,
+    #008083 -23.72%,
+    rgba(9, 225, 186, 0) 145.24%
+  );
+  z-index: -2;
+}
+
+.big-ocean-triangle {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.footer-home-icon {
+  position: absolute;
+  bottom: 56px;
+  right: 39px;
+}
+
+.subtitle {
+  color: #008083;
+  font-size: 30px;
+  font-weight: 500;
+  padding-top: 66px;
 }
