--- a/src/adaptive.css
+++ b/src/adaptive.css
@@ -34,4 +34,12 @@
     right: 46px;
     padding: 28px 20px 39px 20px;
   }
+
+  .content-09 {
+    justify-content: center;
+  }
+
+  .content-09 > img {
+    width: 300px;
+  }
 }
