--- a/src/styles.css
+++ b/src/styles.css
@@ -109,6 +109,7 @@ body {
   font-size: 30px;
   font-weight: 500;
   padding-top: 45px;
+  text-transform: uppercase;
 }
 
 .ergoferon-diagram-07 {
@@ -343,4 +344,20 @@ body {
 .slide_11_3 {
   position: relative;
   top: 86px;
+}
+
+.content-12 {
+  display: flex;
+  align-items: flex-end;
+}
+
+.content-12-colors {
+  position: relative;
+  bottom: 150px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-12 > img {
+  width: 80%;
 }
