--- a/src/styles.css
+++ b/src/styles.css
@@ -346,6 +346,18 @@ body {
   top: 86px;
 }
 
+.slide_11_6 {
+  position: absolute;
+  bottom: 260px;
+  right: 427px;
+}
+
+.slide_11_7 {
+  position: absolute;
+  bottom: 269px;
+  left: 269px;
+}
+
 .content-12 {
   display: flex;
   align-items: flex-end;
@@ -405,4 +417,27 @@ body {
 .content-14-colors {
   position: relative;
   bottom: 76px;
+}
+
+.content-15 {
+  display: grid;
+  display: grid;
+  grid-template-columns: 60% auto;
+
+  grid-template-rows: auto auto;
+  align-items: center;
+  justify-items: end;
+  gap: 70px;
+}
+
+.slide_15_2 {
+  position: relative;
+  bottom: 454px;
+  grid-row-start: 2;
+  grid-column-start: 2;
+}
+
+.bell-info-15 {
+  position: relative;
+  bottom: 166px;
 }
