--- a/src/adaptive.css
+++ b/src/adaptive.css
@@ -94,4 +94,11 @@
     width: 115%;
     bottom: 322px;
   }
+
+  .content-17 {
+    margin-left: 0;
+  }
+  .slide_17_1 {
+    width: 900px;
+  }
 }
