--- a/src/styles.css
+++ b/src/styles.css
@@ -441,3 +441,11 @@ body {
   position: relative;
   bottom: 166px;
 }
+
+.content-17 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 300px;
+  margin-top: 46px;
+}
