--- a/src/styles.css
+++ b/src/styles.css
@@ -449,3 +449,16 @@ body {
   margin-left: 300px;
   margin-top: 46px;
 }
+
+.content-18 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+}
+
+.content-18-colors {
+  position: relative;
+  bottom: 83px;
+  right: 410px;
+}
