--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 @import "./reset.css";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,600&display=swap");
 
 body {
   font-family: Montserrat;
@@ -35,10 +35,20 @@ body {
 }
 
 .header-title {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   color: #008083;
   font-size: 57px;
   font-weight: 700;
   grid-area: title;
+}
+
+.header-title > span {
+  font-size: 25px;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-style: italic;
 }
 
 .header-divider {
@@ -461,4 +471,17 @@ body {
   position: relative;
   bottom: 83px;
   right: 410px;
+}
+
+.content-20 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 107px;
+  gap: 63px;
+}
+
+.content-20-colors {
+  position: relative;
+  right: 230px;
 }
