--- a/src/styles.css
+++ b/src/styles.css
@@ -507,3 +507,22 @@ body {
   top: 33px;
   right: 27%;
 }
+
+.content-30,
+.content-31 {
+  display: flex;
+  justify-content: center;
+  margin-top: 85px;
+}
+
+.slide_30_2,
+.slide_31_2 {
+  position: absolute;
+  top: 21px;
+  right: 603px;
+}
+
+.slide_31_2 {
+  top: 30px;
+  right: 500px;
+}
