--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 @import "./reset.css";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;1,600&display=swap");
 
 body {
   font-family: Montserrat;
@@ -17,7 +17,7 @@ body {
 
 .header {
   display: grid;
-  grid-template-columns: auto 67%;
+  grid-template-columns: auto 60%;
   grid-template-areas:
     "title description"
     "divider divider";
@@ -81,10 +81,10 @@ body {
 .footer-info {
   display: grid;
   position: absolute;
-  bottom: 33px;
+  bottom: 60px;
   left: 46px;
   align-items: center;
-  grid-template-columns: 43px 80%;
+  grid-template-columns: 43px auto;
   gap: 10px;
 }
 
@@ -509,7 +509,13 @@ body {
 }
 
 .content-30,
-.content-31 {
+.content-31,
+.content-32,
+.content-34,
+.content-36,
+.content-37,
+.content-39,
+.content-40 {
   display: flex;
   justify-content: center;
   margin-top: 85px;
