--- a/src/adaptive.css
+++ b/src/adaptive.css
@@ -138,4 +138,11 @@
   .content-40-footer {
     left: unset;
   }
+
+  .slide_38_1 {
+    width: 50%;
+  }
+  .slide_38_2 {
+    width: 53%;
+  }
 }
