--- a/src/adaptive.css
+++ b/src/adaptive.css
@@ -91,19 +91,20 @@
     margin-left: 0;
   }
 
-  .content-22-colors {
+  .content-21-colors {
     right: 67px;
   }
-
+  .slide_17_1,
+  .content-18 > img,
+  .content-20 > img,
+  .content-21 > img,
+  .content-22 > img,
   .content-23 > img,
   .content-24 > img,
   .content-25 > img,
-  .content-26 > img,
+  .content-29 > img,
   .content-30 > img,
-  .content-22 > img,
-  .content-18 > img,
   .content-31 > img,
-  .slide_17_1,
   .content-32 > img,
   .content-34 > img,
   .content-36 > img,
@@ -113,7 +114,7 @@
     width: 900px;
   }
 
-  .hearts-25,
+  .hearts-24,
   .slide_30_2,
   .slide_11_7,
   .slide_11_6,
@@ -158,5 +159,16 @@
   .footer-38 {
     align-items: flex-start;
     grid-template-columns: 43px 70%;
+  }
+
+  .content-35 {
+    left: -162px;
+  }
+
+  .slide_35_2 {
+    width: 31%;
+  }
+  .slide_35_1 {
+    width: 90%;
   }
 }
