--- a/src/adaptive.css
+++ b/src/adaptive.css
@@ -106,6 +106,7 @@
   .content-30 > img,
   .content-31 > img,
   .content-32 > img,
+  .content-33 > img,
   .content-34 > img,
   .content-36 > img,
   .content-37 > img,
@@ -170,5 +171,40 @@
   }
   .slide_35_1 {
     width: 90%;
+  }
+
+  .slide_28_1,
+  .slide_28_2 {
+    width: 75%;
+  }
+
+  .box1-28 > img,
+  .box2-28 > img {
+    width: 75%;
+  }
+
+  .box2-28 {
+    margin-right: 0;
+    bottom: 300px;
+  }
+
+  .slide_24_2 {
+    position: unset;
+    display: none;
+  }
+
+  .slide_35_2_28 {
+    width: 75%;
+  }
+
+  .slide_26_1 {
+    width: 100%;
+    position: unset;
+    right: unset;
+    top: unset;
+  }
+
+  .footer-26 {
+    grid-template-columns: 43px 76%;
   }
 }
