--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -86,6 +86,7 @@ body {
   align-items: center;
   grid-template-columns: 43px auto;
   gap: 30px;
+  font-size: 14px;
 }
 
 .footer-line {
@@ -98,7 +99,7 @@ body {
     #008083 -23.72%,
     rgba(9, 225, 186, 0) 145.24%
   );
-  z-index: -2;
+  z-index: 0;
 }
 
 .big-ocean-triangle {
@@ -507,6 +508,7 @@ body {
   top: 33px;
   right: 27%;
 }
+
 .content-20,
 .content-29,
 .content-30,
@@ -568,19 +570,6 @@ body {
   position: absolute;
   bottom: 58px;
   left: 55px;
-}
-
-.content-40-footer {
-  bottom: 75px;
-  left: 500px;
-  align-items: flex-start;
-}
-
-.content-37-footer {
-  align-items: flex-start;
-  position: absolute;
-  right: 240px;
-  left: auto;
 }
 
 .content-38,
@@ -654,27 +643,6 @@ body {
   margin-top: 60px;
 }
 
-.divider-33 {
-  grid-template-columns: auto 69%;
-}
-
-.divider-41,
-.divider-38 {
-  grid-template-columns: auto 0%;
-}
-
-.divider-20 {
-  grid-template-columns: auto 50%;
-}
-
-.divider-28 {
-  grid-template-columns: auto 34%;
-}
-
-.divider-26 {
-  grid-template-columns: auto 45%;
-}
-
 .content-28 {
   display: grid;
   row-gap: 10px;
@@ -734,11 +702,6 @@ body {
   left: 0;
 }
 
-.footer-28 {
-  left: unset;
-  right: 223px;
-}
-
 .slide_26_1 {
   position: absolute;
   right: 60px;
@@ -747,4 +710,12 @@ body {
 
 .title-26 {
   font-size: 35px;
+}
+
+.header-19 {
+  display: none;
+}
+
+.content-19 {
+  display: flex;
 }
