Fix ergoferon part

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -95,9 +95,9 @@ body {
   height: 21px;
   width: 100%;
   background: linear-gradient(
-    90deg,
-    #008083 -23.72%,
-    rgba(9, 225, 186, 0) 145.24%
+    133.61deg,
+    rgb(0, 128, 131) -23.74%,
+    rgba(9, 225, 186, 0) 145.222%
   );
   z-index: 0;
 }
@@ -172,6 +172,7 @@ body {
   display: grid;
   grid-template-columns: auto auto 0% auto;
   align-items: center;
+  margin-top: 70px;
 }
 
 .colors {
