--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -315,6 +315,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-top: 60px;
 }
 
 .content-11-box {
@@ -360,19 +361,20 @@ body {
 
 .slide_11_6 {
   position: absolute;
-  bottom: 260px;
+  bottom: 160px;
   right: 427px;
 }
 
 .slide_11_7 {
   position: absolute;
-  bottom: 269px;
+  bottom: 189px;
   left: 269px;
 }
 
 .content-12 {
   display: flex;
   align-items: flex-end;
+  margin-top: 60px;
 }
 
 .content-12-colors {
@@ -390,6 +392,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
+  margin-top: 60px;
 }
 
 .slide_13_1 {
@@ -435,7 +438,7 @@ body {
   display: grid;
   display: grid;
   grid-template-columns: 60% auto;
-
+  margin-top: 60px;
   grid-template-rows: auto auto;
   align-items: center;
   justify-items: end;
