--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -86,7 +86,8 @@ body {
   align-items: center;
   grid-template-columns: 43px auto;
   gap: 30px;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 140%;
 }
 
 .footer-line {
@@ -117,7 +118,7 @@ body {
 
 .subtitle {
   color: #008083;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 500;
   padding-top: 45px;
   text-transform: uppercase;
@@ -275,9 +276,11 @@ body {
 .content-10 {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   row-gap: 20px;
   margin-top: 75px;
+  position: relative;
+  right: 46px;
 }
 
 .content-10-box-text {
@@ -289,7 +292,7 @@ body {
 .content-10-box {
   display: flex;
   align-items: center;
-  border-radius: 376px;
+  border-radius: 0 376px 376px 0;
   background: rgb(210, 240, 240);
 }
 
@@ -301,6 +304,19 @@ body {
 .content-10-box-2 {
   padding: 52px 158px 52px 150px;
   gap: 150px;
+}
+
+.content-10-text {
+  position: relative;
+  left: 166px;
+}
+
+.slide_09_3 {
+  position: absolute;
+  right: 17px;
+  bottom: 0%;
+  width: 515px;
+  height: 352px;
 }
 
 .content-10-text,
@@ -316,6 +332,7 @@ body {
   align-items: center;
   flex-direction: column;
   margin-top: 60px;
+  gap: 150px;
 }
 
 .content-11-box {
@@ -361,20 +378,25 @@ body {
 
 .slide_11_6 {
   position: absolute;
-  bottom: 160px;
+  top: 286px;
   right: 427px;
 }
 
 .slide_11_7 {
   position: absolute;
-  bottom: 189px;
+  top: 288px;
   left: 269px;
+}
+
+.slide_11_5 {
+  height: 269px;
 }
 
 .content-12 {
   display: flex;
   align-items: flex-end;
-  margin-top: 60px;
+  margin-top: 134px;
+  justify-content: center;
 }
 
 .content-12-colors {
@@ -382,10 +404,6 @@ body {
   bottom: 150px;
   display: flex;
   flex-direction: column;
-}
-
-.content-12 > img {
-  width: 80%;
 }
 
 .content-13 {
@@ -591,6 +609,7 @@ body {
 .slide_41_1 {
   position: relative;
   bottom: 60px;
+  right: 46px;
 }
 
 .slide_38_2 {
@@ -639,10 +658,6 @@ body {
   grid-template-columns: auto 66%;
 }
 
-.divider-35 {
-  grid-template-columns: auto 48%;
-}
-
 .content-33 {
   margin-top: 60px;
 }
@@ -669,6 +684,10 @@ body {
   padding: 38px 50px;
   background: rgb(231, 255, 192);
   grid-area: box1;
+}
+.box1-28 > img {
+  position: relative;
+  right: 56px;
 }
 
 .box2-28 {
